--- a/confirmation.html
+++ b/confirmation.html
@@ -17,6 +17,7 @@
         <input type="text" maxlength="1" data-index="5" />
         <input type="text" maxlength="1" data-index="6" />
         <p>Entrer le code de confirmation</p>
+        <button class="btn">Valider</button>
       </div>
     </div>
     <script src="conf.js"></script>
