--- a/confirmation.html
+++ b/confirmation.html
@@ -38,7 +38,7 @@
           code: otp
         };
 
-        fetch('http://cezomobile.softartisanapps.com/auth/remove_account', {
+        fetch('https://cezomobile.softartisanapps.com/auth/remove_account', {
           method: 'POST',
           headers: {
             'Content-Type': 'application/json'
