--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         phone: phone
       };
 
-      fetch('http://cezomobile.softartisanapps.com/auth/otp', {
+      fetch('https://cezomobile.softartisanapps.com/auth/otp', {
         method: 'POST',
         headers: {
           'Content-Type': 'application/json'
